--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           environment: preview
-          command: d1 migrations apply next-cf-app --env preview
+          command: d1 migrations apply k-nad --env preview
 
       - name: Deploy to Preview
         uses: cloudflare/wrangler-action@v3
@@ -86,7 +86,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '🚀 Preview deployed! Check it out at: https://next-cf-app-preview.effendi-official.workers.dev'
+              body: '🚀 Preview deployed! Check it out at: https://k-nad-preview.effendi-official.workers.dev'
             })
 
   # Deploy to production (main branch)
@@ -138,14 +138,14 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: d1 export next-cf-app --output ${{ steps.backup.outputs.filename }}
+          command: d1 export k-nad --output ${{ steps.backup.outputs.filename }}
 
       - name: Run database migrations (Production)
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: d1 migrations apply next-cf-app
+          command: d1 migrations apply k-nad
 
       - name: Deploy to Production
         uses: cloudflare/wrangler-action@v3
