--- a/package.json
+++ b/package.json
@@ -1,76 +1,76 @@
 {
-  "name": "k-nad",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "wrangler:dev": "npx wrangler dev",
-    "dev:cf": "npx @opennextjs/cloudflare build && wrangler dev",
-    "dev:remote": "npx @opennextjs/cloudflare build && wrangler dev --remote",
-    "build:cf": "npx @opennextjs/cloudflare build",
-    "deploy:cf": "npx @opennextjs/cloudflare deploy",
-    "preview:cf": "npx @opennextjs/cloudflare preview",
-    "deploy": "npx @opennextjs/cloudflare deploy",
-    "deploy:preview": "npx @opennextjs/cloudflare deploy --env preview",
-    "db:generate": "drizzle-kit generate",
-    "db:generate:named": "drizzle-kit generate --name",
-    "db:migrate:local": "wrangler d1 migrations apply next-cf-app --local",
-    "db:migrate:preview": "wrangler d1 migrations apply next-cf-app --env preview",
-    "db:migrate:prod": "wrangler d1 migrations apply next-cf-app --remote",
-    "db:studio": "drizzle-kit studio",
-    "db:studio:local": "drizzle-kit studio --config=drizzle.local.config.ts",
-    "db:inspect:local": "wrangler d1 execute next-cf-app --local --command=\"SELECT name FROM sqlite_master WHERE type='table';\"",
-    "db:inspect:preview": "wrangler d1 execute next-cf-app --env preview --command=\"SELECT name FROM sqlite_master WHERE type='table';\"",
-    "db:inspect:prod": "wrangler d1 execute next-cf-app --remote --command=\"SELECT name FROM sqlite_master WHERE type='table';\"",
-    "db:reset:local": "wrangler d1 execute next-cf-app --local --command=\"DROP TABLE IF EXISTS todos;\" && pnpm run db:migrate:local",
-    "cf:secret": "npx wrangler secret put",
-    "cf-typegen": "pnpm exec wrangler types && pnpm exec wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
-    "lint": "npx biome format --write"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@opennextjs/cloudflare": "^1.12.0",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.8",
-    "@radix-ui/react-slot": "^1.2.4",
-    "better-auth": "^1.3.34",
-    "better-sqlite3": "^12.4.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.7",
-    "copy-to-clipboard": "^3.3.3",
-    "date-fns": "^4.1.0",
-    "drizzle-zod": "^0.8.3",
-    "lucide-react": "^0.553.0",
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.0",
-    "ethers": "^6.15.0",
-    "react-dropzone": "^14.3.8",
-    "react-hot-toast": "^2.6.0",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.12",
-    "react-masonry-css": "^1.0.16",
-    "react-virtuoso": "^4.14.1"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.5",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.7",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "wrangler": "^4.47.0"
-  }
+	"name": "k-nad",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"wrangler:dev": "npx wrangler dev",
+		"dev:cf": "npx @opennextjs/cloudflare build && wrangler dev",
+		"dev:remote": "npx @opennextjs/cloudflare build && wrangler dev --remote",
+		"build:cf": "npx @opennextjs/cloudflare build",
+		"deploy:cf": "npx @opennextjs/cloudflare deploy",
+		"preview:cf": "npx @opennextjs/cloudflare preview",
+		"deploy": "npx @opennextjs/cloudflare deploy",
+		"deploy:preview": "npx @opennextjs/cloudflare deploy --env preview",
+		"db:generate": "drizzle-kit generate",
+		"db:generate:named": "drizzle-kit generate --name",
+		"db:migrate:local": "wrangler d1 migrations apply k-nad --local",
+		"db:migrate:preview": "wrangler d1 migrations apply k-nad --env preview",
+		"db:migrate:prod": "wrangler d1 migrations apply k-nad --remote",
+		"db:studio": "drizzle-kit studio",
+		"db:studio:local": "drizzle-kit studio --config=drizzle.local.config.ts",
+		"db:inspect:local": "wrangler d1 execute k-nad --local --command=\"SELECT name FROM sqlite_master WHERE type='table';\"",
+		"db:inspect:preview": "wrangler d1 execute k-nad --env preview --command=\"SELECT name FROM sqlite_master WHERE type='table';\"",
+		"db:inspect:prod": "wrangler d1 execute k-nad --remote --command=\"SELECT name FROM sqlite_master WHERE type='table';\"",
+		"db:reset:local": "wrangler d1 execute k-nad --local --command=\"DROP TABLE IF EXISTS todos;\" && pnpm run db:migrate:local",
+		"cf:secret": "npx wrangler secret put",
+		"cf-typegen": "pnpm exec wrangler types && pnpm exec wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
+		"lint": "npx biome format --write"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@opennextjs/cloudflare": "^1.12.0",
+		"@radix-ui/react-alert-dialog": "^1.1.15",
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-select": "^2.2.6",
+		"@radix-ui/react-separator": "^1.1.8",
+		"@radix-ui/react-slot": "^1.2.4",
+		"better-auth": "^1.3.34",
+		"better-sqlite3": "^12.4.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.44.7",
+		"copy-to-clipboard": "^3.3.3",
+		"date-fns": "^4.1.0",
+		"drizzle-zod": "^0.8.3",
+		"lucide-react": "^0.553.0",
+		"next": "16.0.3",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
+		"react-hook-form": "^7.66.0",
+		"ethers": "^6.15.0",
+		"react-dropzone": "^14.3.8",
+		"react-hot-toast": "^2.6.0",
+		"tailwind-merge": "^3.4.0",
+		"zod": "^4.1.12",
+		"react-masonry-css": "^1.0.16",
+		"react-virtuoso": "^4.14.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.5",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^24.10.1",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.31.7",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "^5",
+		"wrangler": "^4.47.0"
+	}
 }
