--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -12,3 +12,6 @@ CLOUDFLARE_API_TOKEN=your-api-token-here
 # Authentication
 BETTER_AUTH_SECRET=your-better-auth-secret # see https://www.better-auth.com/docs/installation
 BETTER_AUTH_URL=http://localhost:3000 # Base URL of your app - should use the deployed URL in Workers for prod
+
+NFT_CONTRACT_ADDRESS=
+MONAD_RPC_URL=
