--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -15,3 +15,7 @@ BETTER_AUTH_URL=http://localhost:3000 # Base URL of your app - should use the de
 
 NFT_CONTRACT_ADDRESS=
 MONAD_RPC_URL=
+
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
+ADMIN_SESSION_SECRET=
