--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -7,6 +7,9 @@ NEXTJS_ENV=development
 CLOUDFLARE_ACCOUNT_ID=your-account-id-here
 CLOUDFLARE_D1_TOKEN=your-api-token-here
 CLOUDFLARE_R2_URL=your-r2-url-here
+CLOUDFLARE_R2_S3_API_URL=https://your-account-hash.r2.cloudflarestorage.com/your-bucket
+CLOUDFLARE_R2_ACCESS_KEY_ID=your-r2-access-key-id
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=your-r2-secret-access-key
 CLOUDFLARE_API_TOKEN=your-api-token-here
 
 # Authentication
